--- a/index.html
+++ b/index.html
@@ -25,13 +25,23 @@
 	</main>
 
 	<div class="controlls">
-		<div class="control">
-			<div class="control control-1 active-btn"></div>
-			<div class="control control-2 active-btn"></div>
-			<div class="control control-3 active-btn"></div>
-			<div class="control control-4 active-btn"></div>
-			<div class="control control-5 active-btn"></div>
+		<div class="control control-1 active-btn">
+			<i class="fas fa-home"></i>
+		</div>
+		<div class="control control-2">
+			<i class="fas fa-user"></i>
+		</div>
+		<div class="control control-3">
+			<i class="fas fa-briefcase"></i>
+		</div>
+		<div class="control control-4">
+			<i class="fas fa-newspaper"></i>
+		</div>
+		<div class="control control-5">
+			<i class="fas fa-envelope-open"></i>
 		</div>
 	</div>
+
+	<script src="app.js"></script>
 </body>
 </html>
