--- a/index.html
+++ b/index.html
@@ -14,30 +14,51 @@
 	<!-- Links -->
 </head>
 <body class="main-content">
-	<header class="section sec1 header active">
-
+	<header class="section sec1 header active" id="home">
+		<div class="header-content">
+			<div class="left-header">
+				<div class="h-shape"></div>
+				<div class="image">
+					<img src="assets/img/rudeus.webp" alt="">
+				</div>
+			</div>
+			<div class="right-header">
+				<h1 class="name">
+					Hi, I'm <span class="name">Uriel Moya Mata.</span>
+					A Web Developer
+				</h1>
+				<p>
+					I like to create beautiful and functional websites.
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam posuere ligula ut orci accumsan, vel bibendum lectus mattis. Quisque vel lacinia libero. Aenean eu felis elit. Cras ante justo, ultrices vitae diam vel, suscipit vestibulum elit. Aenean ac risus vitae felis sagittis egestas eget at massa. Aenean odio elit, maximus nec lectus a, accumsan molestie nulla. In pellentesque et turpis nec condimentum. Fusce consectetur, magna vitae feugiat aliquet, metus ante placerat est, at auctor lectus arcu a neque. Quisque sed maximus nunc, et lobortis ipsum. Ut quis euismod turpis. Duis feugiat quam nec malesuada accumsan.
+				</p>
+				<a href=""class="main-btn">
+					<span class="btn-text">Download CV</span>
+					<span class="btn-icon"><i class="fas fa-download"></i></span>
+				</a>
+			</div>
+		</div>
 	</header>
 	<main>
-		<section class="section sec2 about"></section>
-		<section class="section sec3 portfolio"></section>
-		<section class="section sec4 blogs"></section>
-		<section class="section sec2 contact"></section>
+		<section class="section sec2 about" id="about"></section>
+		<section class="section sec3 portfolio" id="portfolio"></section>
+		<section class="section sec4 blogs" id="blogs"></section>
+		<section class="section sec2 contact" id="contact"></section>
 	</main>
 
 	<div class="controlls">
-		<div class="control control-1 active-btn">
+		<div class="control control-1 active-btn" data-id="home">
 			<i class="fas fa-home"></i>
 		</div>
-		<div class="control control-2">
+		<div class="control control-2" data-id="about">
 			<i class="fas fa-user"></i>
 		</div>
-		<div class="control control-3">
+		<div class="control control-3" data-id="portfolio">
 			<i class="fas fa-briefcase"></i>
 		</div>
-		<div class="control control-4">
+		<div class="control control-4" data-id="blogs">
 			<i class="fas fa-newspaper"></i>
 		</div>
-		<div class="control control-5">
+		<div class="control control-5" data-id="contact">
 			<i class="fas fa-envelope-open"></i>
 		</div>
 	</div>
