--- a/index.html
+++ b/index.html
@@ -29,12 +29,14 @@
 				</h1>
 				<p>
 					I like to create beautiful and functional websites.
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam posuere ligula ut orci accumsan, vel bibendum lectus mattis. Quisque vel lacinia libero. Aenean eu felis elit. Cras ante justo, ultrices vitae diam vel, suscipit vestibulum elit. Aenean ac risus vitae felis sagittis egestas eget at massa. Aenean odio elit, maximus nec lectus a, accumsan molestie nulla. In pellentesque et turpis nec condimentum. Fusce consectetur, magna vitae feugiat aliquet, metus ante placerat est, at auctor lectus arcu a neque. Quisque sed maximus nunc, et lobortis ipsum. Ut quis euismod turpis. Duis feugiat quam nec malesuada accumsan.
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam posuere ligula ut orci accumsan, vel bibendum lectus mattis. Quisque vel lacinia libero.
 				</p>
-				<a href=""class="main-btn">
-					<span class="btn-text">Download CV</span>
-					<span class="btn-icon"><i class="fas fa-download"></i></span>
-				</a>
+				<div class="btn-con">
+					<a href=""class="main-btn">
+						<span class="btn-text">Download CV</span>
+						<span class="btn-icon"><i class="fas fa-download"></i></span>
+					</a>
+				</div>
 			</div>
 		</div>
 	</header>
