--- a/index.html
+++ b/index.html
@@ -41,7 +41,112 @@
 		</div>
 	</header>
 	<main>
-		<section class="section sec2 about" id="about"></section>
+		<section class="section sec2 about" id="about">
+			<div class="main-title">
+				<h2>
+					About <span>me</span>
+					<span class="bg-text">my stats</span>
+				</h2>
+			</div>
+			<div class="about-container">
+				<div class="left-about">
+					<h4>Information About Me</h4>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus id metus sed velit faucibus aliquet at a nibh. Nulla sit amet neque tempor lacus dictum tincidunt. Sed cursus, massa interdum pulvinar mattis, ligula ante luctus odio, non congue erat dui ut tellus. Mauris vel rhoncus urna. Donec ullamcorper aliquam lorem eget dignissim. In sit amet orci vehicula, faucibus ex sit amet, viverra arcu. Pellentesque cursus quis sem ut pulvinar. Quisque egestas magna mi, non suscipit diam malesuada et. Pellentesque commodo ante at eros imperdiet, nec accumsan dolor mattis. Aenean vel pellentesque orci, et tristique eros. Cras congue tortor posuere porttitor ullamcorper. Pellentesque feugiat arcu lectus, vitae condimentum turpis commodo vel. Vivamus porta et mauris eget vulputate. Integer vehicula facilisis felis ac consectetur.
+					</p>
+					<div class="btn-con">
+						<a href=""class="main-btn">
+							<span class="btn-text">Download CV</span>
+							<span class="btn-icon"><i class="fas fa-download"></i></span>
+						</a>
+					</div>
+				</div>
+				<div class="right-about">
+					<div class="about-item">
+						<div class="abt-text">
+							<p class="large-text">560+</p>
+							<p class="small-text">Projects <br /> Completed</p>
+						</div>
+					</div>
+					<div class="about-item">
+						<div class="abt-text">
+							<p class="large-text">10+</p>
+							<p class="small-text">Years of <br /> Experience</p>
+						</div>
+					</div>
+					<div class="about-item">
+						<div class="abt-text">
+							<p class="large-text">300+</p>
+							<p class="small-text">Happy <br /> Clients</p>
+						</div>
+					</div>
+					<div class="about-item">
+						<div class="abt-text">
+							<p class="large-text">400+</p>
+							<p class="small-text">Customer <br /> Reviews</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="about-stats">
+				<h4 class="stat-title">My Skills</h4>
+				<div class="stats-skills">
+					<div class="about-item">
+						<div class="abt-text">
+							<p class="large-text">HTML</p>
+						</div>
+					</div>
+					<div class="about-item">
+						<div class="abt-text">
+							<p class="large-text">CSS</p>
+						</div>
+					</div>
+					<div class="about-item">
+						<div class="abt-text">
+							<p class="large-text">JavaScript</p>
+						</div>
+					</div>
+					<div class="about-item">
+						<div class="abt-text">
+							<p class="large-text">PHP</p>
+						</div>
+					</div>
+					<div class="about-item">
+						<div class="abt-text">
+							<p class="large-text">C++</p>
+						</div>
+					</div>
+					<div class="about-item">
+						<div class="abt-text">
+							<p class="large-text">SQL</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<h4 class="stat-title">My Timeline</h4>
+			<div class="about-timeline">
+				<div class="timeline-item">
+					<div class="tl-icon">
+						<i class="fas fa-briefcase"></i>
+					</div>
+					<p class="tl-duration">2010 - Present</p>
+					<h5>Web Developer<span> - Vircrosoft</span></h5>
+					<p>
+						a;sdlfkjas;d fjadsl;fj  lasdkfjalkfj aklsdjfalsdj falsdkfj asdlkfj alsdfj
+					</p>
+				</div>
+				<div class="timeline-item">
+					<div class="tl-icon">
+						<i class="fas fa-briefcase"></i>
+					</div>
+					<p class="tl-duration">2010 - Present</p>
+					<h5>Web Developer<span> - Vircrosoft</span></h5>
+					<p>
+						a;sdlfkjas;d fjadsl;fj  lasdkfjalkfj aklsdjfalsdj falsdkfj asdlkfj alsdfj
+					</p>
+				</div>
+			</div>
+		</section>
 		<section class="section sec3 portfolio" id="portfolio"></section>
 		<section class="section sec4 blogs" id="blogs"></section>
 		<section class="section sec2 contact" id="contact"></section>
