--- a/index.html
+++ b/index.html
@@ -1,175 +1,243 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Portafolio</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Portafolio</title>
 
-	<!-- Links -->
-	<link rel="stylesheet" href="styles/styles.css">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-	<!-- Links -->
-</head>
-<body class="main-content">
-	<header class="section sec1 header active" id="home">
-		<div class="header-content">
-			<div class="left-header">
-				<div class="h-shape"></div>
-				<div class="image">
-					<img src="assets/img/rudeus.webp" alt="">
-				</div>
-			</div>
-			<div class="right-header">
-				<h1 class="name">
-					Hi, I'm <span class="name">Uriel Moya Mata.</span>
-					A Web Developer
-				</h1>
-				<p>
-					I like to create beautiful and functional websites.
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam posuere ligula ut orci accumsan, vel bibendum lectus mattis. Quisque vel lacinia libero.
-				</p>
-				<div class="btn-con">
-					<a href=""class="main-btn">
-						<span class="btn-text">Download CV</span>
-						<span class="btn-icon"><i class="fas fa-download"></i></span>
-					</a>
-				</div>
-			</div>
-		</div>
-	</header>
-	<main>
+    <!-- Links -->
+    <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+      integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+      integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <!-- Links -->
+  </head>
+  <body class="main-content">
+    <header class="section sec1 header active" id="home">
+      <div class="header-content">
+        <div class="left-header">
+          <div class="h-shape"></div>
+          <div class="image">
+            <img src="assets/img/rudeus.webp" alt="" />
+          </div>
+        </div>
+        <div class="right-header">
+          <h1 class="name">
+            Hi, I'm <span class="name">Uriel Moya Mata.</span>
+            A Web Developer
+          </h1>
+          <p>
+            I like to create beautiful and functional websites. Lorem ipsum
+            dolor sit amet, consectetur adipiscing elit. Nullam posuere ligula
+            ut orci accumsan, vel bibendum lectus mattis. Quisque vel lacinia
+            libero.
+          </p>
+          <div class="btn-con">
+            <a href="" class="main-btn">
+              <span class="btn-text">Download CV</span>
+              <span class="btn-icon"><i class="fas fa-download"></i></span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </header>
+    <main>
 		<section class="section sec2 about" id="about">
 			<div class="main-title">
-				<h2>
-					About <span>me</span>
-					<span class="bg-text">my stats</span>
-				</h2>
+			<h2>
+				About <span>me</span>
+				<span class="bg-text">my stats</span>
+			</h2>
 			</div>
 			<div class="about-container">
-				<div class="left-about">
-					<h4>Information About Me</h4>
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus id metus sed velit faucibus aliquet at a nibh. Nulla sit amet neque tempor lacus dictum tincidunt. Sed cursus, massa interdum pulvinar mattis, ligula ante luctus odio, non congue erat dui ut tellus. Mauris vel rhoncus urna. Donec ullamcorper aliquam lorem eget dignissim. In sit amet orci vehicula, faucibus ex sit amet, viverra arcu. Pellentesque cursus quis sem ut pulvinar. Quisque egestas magna mi, non suscipit diam malesuada et. Pellentesque commodo ante at eros imperdiet, nec accumsan dolor mattis. Aenean vel pellentesque orci, et tristique eros. Cras congue tortor posuere porttitor ullamcorper. Pellentesque feugiat arcu lectus, vitae condimentum turpis commodo vel. Vivamus porta et mauris eget vulputate. Integer vehicula facilisis felis ac consectetur.
-					</p>
-					<div class="btn-con">
-						<a href=""class="main-btn">
-							<span class="btn-text">Download CV</span>
-							<span class="btn-icon"><i class="fas fa-download"></i></span>
-						</a>
-					</div>
-				</div>
-				<div class="right-about">
-					<div class="about-item">
-						<div class="abt-text">
-							<p class="large-text">560+</p>
-							<p class="small-text">Projects <br /> Completed</p>
-						</div>
-					</div>
-					<div class="about-item">
-						<div class="abt-text">
-							<p class="large-text">10+</p>
-							<p class="small-text">Years of <br /> Experience</p>
-						</div>
-					</div>
-					<div class="about-item">
-						<div class="abt-text">
-							<p class="large-text">300+</p>
-							<p class="small-text">Happy <br /> Clients</p>
-						</div>
-					</div>
-					<div class="about-item">
-						<div class="abt-text">
-							<p class="large-text">400+</p>
-							<p class="small-text">Customer <br /> Reviews</p>
-						</div>
-					</div>
+			<div class="left-about">
+				<h4>Information About Me</h4>
+				<p>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
+				id metus sed velit faucibus aliquet at a nibh. Nulla sit amet
+				neque tempor lacus dictum tincidunt. Sed cursus, massa interdum
+				pulvinar mattis, ligula ante luctus odio, non congue erat dui ut
+				tellus. Mauris vel rhoncus urna. Donec ullamcorper aliquam lorem
+				eget dignissim. In sit amet orci vehicula, faucibus ex sit amet,
+				viverra arcu. Pellentesque cursus quis sem ut pulvinar. Quisque
+				egestas magna mi, non suscipit diam malesuada et. Pellentesque
+				commodo ante at eros imperdiet, nec accumsan dolor mattis. Aenean
+				vel pellentesque orci, et tristique eros. Cras congue tortor
+				posuere porttitor ullamcorper. Pellentesque feugiat arcu lectus,
+				vitae condimentum turpis commodo vel. Vivamus porta et mauris eget
+				vulputate. Integer vehicula facilisis felis ac consectetur.
+				</p>
+				<div class="btn-con">
+				<a href="" class="main-btn">
+					<span class="btn-text">Download CV</span>
+					<span class="btn-icon"><i class="fas fa-download"></i></span>
+				</a>
 				</div>
 			</div>
-			<div class="about-stats">
-				<h4 class="stat-title">My Skills</h4>
-				<div class="stats-skills">
-					<div class="about-item">
-						<div class="abt-text">
-							<p class="large-text">HTML</p>
-						</div>
-					</div>
-					<div class="about-item">
-						<div class="abt-text">
-							<p class="large-text">CSS</p>
-						</div>
-					</div>
-					<div class="about-item">
-						<div class="abt-text">
-							<p class="large-text">JavaScript</p>
-						</div>
-					</div>
-					<div class="about-item">
-						<div class="abt-text">
-							<p class="large-text">PHP</p>
-						</div>
-					</div>
-					<div class="about-item">
-						<div class="abt-text">
-							<p class="large-text">C++</p>
-						</div>
-					</div>
-					<div class="about-item">
-						<div class="abt-text">
-							<p class="large-text">SQL</p>
-						</div>
-					</div>
+			<div class="right-about">
+				<div class="about-item">
+				<div class="abt-text">
+					<p class="large-text">560+</p>
+					<p class="small-text">
+					Projects <br />
+					Completed
+					</p>
 				</div>
+				</div>
+				<div class="about-item">
+				<div class="abt-text">
+					<p class="large-text">10+</p>
+					<p class="small-text">
+					Years of <br />
+					Experience
+					</p>
+				</div>
+				</div>
+				<div class="about-item">
+				<div class="abt-text">
+					<p class="large-text">300+</p>
+					<p class="small-text">
+					Happy <br />
+					Clients
+					</p>
+				</div>
+				</div>
+				<div class="about-item">
+				<div class="abt-text">
+					<p class="large-text">400+</p>
+					<p class="small-text">
+					Customer <br />
+					Reviews
+					</p>
+				</div>
+				</div>
+			</div>
+			</div>
+			<div class="about-stats">
+			<h4 class="stat-title">My Skills</h4>
+			<div class="stats-skills">
+				<div class="about-item">
+				<div class="abt-text">
+					<p class="large-text">HTML</p>
+				</div>
+				</div>
+				<div class="about-item">
+				<div class="abt-text">
+					<p class="large-text">CSS</p>
+				</div>
+				</div>
+				<div class="about-item">
+				<div class="abt-text">
+					<p class="large-text">JavaScript</p>
+				</div>
+				</div>
+				<div class="about-item">
+				<div class="abt-text">
+					<p class="large-text">PHP</p>
+				</div>
+				</div>
+				<div class="about-item">
+				<div class="abt-text">
+					<p class="large-text">C++</p>
+				</div>
+				</div>
+				<div class="about-item">
+				<div class="abt-text">
+					<p class="large-text">SQL</p>
+				</div>
+				</div>
+				<div class="about-item">
+				<div class="abt-text">
+					<p class="large-text">PYTHON</p>
+				</div>
+				</div>
+			</div>
 			</div>
 			<h4 class="stat-title">My Timeline</h4>
 			<div class="about-timeline">
-				<div class="timeline-item">
-					<div class="tl-icon">
-						<i class="fas fa-briefcase"></i>
-					</div>
-					<p class="tl-duration">2010 - Present</p>
-					<h5>Web Developer<span> - Vircrosoft</span></h5>
-					<p>
-						a;sdlfkjas;d fjadsl;fj  lasdkfjalkfj aklsdjfalsdj falsdkfj asdlkfj alsdfj
-					</p>
+			<div class="timeline-item">
+				<div class="tl-icon">
+				<i class="fas fa-briefcase"></i>
 				</div>
-				<div class="timeline-item">
-					<div class="tl-icon">
-						<i class="fas fa-briefcase"></i>
-					</div>
-					<p class="tl-duration">2010 - Present</p>
-					<h5>Web Developer<span> - Vircrosoft</span></h5>
-					<p>
-						a;sdlfkjas;d fjadsl;fj  lasdkfjalkfj aklsdjfalsdj falsdkfj asdlkfj alsdfj
-					</p>
+				<p class="tl-duration">2010 - Present</p>
+				<h5>Web Developer<span> - Vircrosoft</span></h5>
+				<p>
+				a;sdlfkjas;d fjadsl;fj lasdkfjalkfj aklsdjfalsdj falsdkfj asdlkfj
+				alsdfj
+				</p>
+			</div>
+			<div class="timeline-item">
+				<div class="tl-icon">
+				<i class="fas fa-briefcase"></i>
 				</div>
+				<p class="tl-duration">2010 - Present</p>
+				<h5>Web Developer<span> - Vircrosoft</span></h5>
+				<p>
+				a;sdlfkjas;d fjadsl;fj lasdkfjalkfj aklsdjfalsdj falsdkfj asdlkfj
+				alsdfj
+				</p>
+			</div>
 			</div>
 		</section>
-		<section class="section sec3 portfolio" id="portfolio"></section>
+		<section class="section sec3 portfolio" id="portfolio">
+			<div class="main-title">
+			<h2>
+				My <span>Portfolio</span>
+				<span class="bg-text">my work</span>
+			</h2>
+			<p class="port-text">Here is some of my work that I've done as a programmer</p>
+			<div class="portfolios">
+				<div class="portfolio-item">
+					<div class="image">
+						<img src="https://assets-global.website-files.com/6009ec8cda7f305645c9d91b/602f2109a787c146dcbe2b66_601b1c1f7567a7399353fe47_traackr.jpeg" alt="">
+					</div>
+					<div class="hover-items">
+						<h3>Project Source</h3>
+						<div class="icons">
+							<a href="" target="_blank" class="icon">
+								<i class="fab fa-github"></i>
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>
+			</div>
+		</section>
 		<section class="section sec4 blogs" id="blogs"></section>
 		<section class="section sec2 contact" id="contact"></section>
-	</main>
+    </main>
 
-	<div class="controlls">
-		<div class="control control-1 active-btn" data-id="home">
-			<i class="fas fa-home"></i>
-		</div>
-		<div class="control control-2" data-id="about">
-			<i class="fas fa-user"></i>
-		</div>
-		<div class="control control-3" data-id="portfolio">
-			<i class="fas fa-briefcase"></i>
-		</div>
-		<div class="control control-4" data-id="blogs">
-			<i class="fas fa-newspaper"></i>
-		</div>
-		<div class="control control-5" data-id="contact">
-			<i class="fas fa-envelope-open"></i>
-		</div>
-	</div>
+    <div class="controlls">
+      <div class="control control-1 active-btn" data-id="home">
+        <i class="fas fa-home"></i>
+      </div>
+      <div class="control control-2" data-id="about">
+        <i class="fas fa-user"></i>
+      </div>
+      <div class="control control-3" data-id="portfolio">
+        <i class="fas fa-briefcase"></i>
+      </div>
+      <div class="control control-4" data-id="blogs">
+        <i class="fas fa-newspaper"></i>
+      </div>
+      <div class="control control-5" data-id="contact">
+        <i class="fas fa-envelope-open"></i>
+      </div>
+    </div>
 
-	<script src="app.js"></script>
-</body>
+    <script src="app.js"></script>
+  </body>
 </html>
