--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
     <main>
 		<section class="section sec2 about" id="about">
 			<div class="main-title">
-			<h2>
-				About <span>me</span>
-				<span class="bg-text">my stats</span>
-			</h2>
+				<h2>
+					About <span>me</span>
+					<span class="bg-text">my stats</span>
+				</h2>
 			</div>
 			<div class="about-container">
 			<div class="left-about">
@@ -217,26 +217,109 @@
 			</div>
 		</section>
 		<section class="section sec4 blogs" id="blogs"></section>
-		<section class="section sec2 contact" id="contact"></section>
+		<section class="section sec2 contact" id="contact">
+			<div class="contact-container">
+				<div class="main-title">
+					<h2>Contact <span>Me</span><span class="bg-text">My Blogs</span></h2>
+				</div>
+				<div class="contact-content-con">
+					<div class="left-contact">
+						<h4>Contact me here</h4>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse quis leo mollis, feugiat leo vitae, ultricies lorem. Phasellus malesuada in metus ac posuere. Vivamus sed tortor velit. Aliquam erat volutpat. Morbi imperdiet quam erat. Ut vehicula id eros id sollicitudin. Sed ut posuere nibh, non tincidunt enim. In sit amet lacus lacus. Fusce tempus consectetur velit, vel tincidunt nulla porttitor in. Nam in scelerisque libero. Integer efficitur felis sit amet nisi placerat, vitae commodo ex auctor. Integer ornare porttitor interdum. In ultrices neque vel erat cursus, sit amet sagittis tellus eleifend. Praesent at risus eu risus egestas tincidunt. Phasellus porta, elit ut tincidunt interdum, magna lectus auctor felis, eu accumsan orci justo a lacus. Donec scelerisque et enim aliquet malesuada.
+						</p>
+						<div class="contact-info">
+							<div class="contact-item">
+								<div class="icon">
+									<i class="fas fa-map-marker-alt"></i>
+									Location
+								</div>
+								<p>
+									: London, United Kingdom
+								</p>
+							</div>
+							<div class="contact-item">
+								<div class="icon">
+									<i class="fas fa-map-marker-alt"></i>
+									Email
+								</div>
+								<p>
+									: London, United Kingdom
+								</p>
+							</div>
+							<div class="contact-item">
+								<div class="icon">
+									<i class="fas fa-map-marker-alt"></i>
+									Education
+								</div>
+								<p>
+									: London, United Kingdom
+								</p>
+							</div>
+							<div class="contact-item">
+								<div class="icon">
+									<i class="fas fa-map-marker-alt"></i>
+									Languages
+								</div>
+								<p>
+									: London, United Kingdom
+								</p>
+							</div>
+						</div>
+						<div class="contact-icons">
+							<div class="contact-icon">
+								<a href="" target="_blank">
+									<i class="fab fa-github"></i>
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="right-contact">
+						<form action="" class="contact-form">
+							<div class="input-control i-c-2">
+								<input type="text" required placeholder="YOUR NAME">
+								<input type="email" required placeholder="YOUR EMAIL">
+							</div>
+							<div class="input-control">
+								<input type="text" required placeholder="ENTER SUBJECT">
+							</div>
+							<div class="input-control">
+								<textarea name="" id="" cols="15" rows="8" placeholder="Message Here..."></textarea>
+							</div>
+							<div class="submit-btn">
+								<a href="" class="main-btn">
+									<span class="btn-text">Download CV</span>
+									<span class="btn-icon"><i class="fas fa-download"></i></span>
+								</a>
+							</div>
+						</form>
+					</div>
+				</div>
+			</div>
+		</section>
     </main>
 
     <div class="controlls">
-      <div class="control control-1 active-btn" data-id="home">
-        <i class="fas fa-home"></i>
-      </div>
-      <div class="control control-2" data-id="about">
-        <i class="fas fa-user"></i>
-      </div>
-      <div class="control control-3" data-id="portfolio">
-        <i class="fas fa-briefcase"></i>
-      </div>
-      <div class="control control-4" data-id="blogs">
-        <i class="fas fa-newspaper"></i>
-      </div>
-      <div class="control control-5" data-id="contact">
-        <i class="fas fa-envelope-open"></i>
-      </div>
+		<div class="control control-1 active-btn" data-id="home">
+        	<i class="fas fa-home"></i>
+		</div>
+		<div class="control control-2" data-id="about">
+        	<i class="fas fa-user"></i>
+		</div>
+		<div class="control control-3" data-id="portfolio">
+        	<i class="fas fa-briefcase"></i>
+		</div>
+		<div class="control control-4" data-id="blogs">
+        	<i class="fas fa-newspaper"></i>
+		</div>
+		<div class="control control-5" data-id="contact">
+        	<i class="fas fa-envelope-open"></i>
+		</div>
     </div>
+
+	<div class="theme-btn">
+		<i class="fas fa-adjust"></i>
+	</div>
 
     <script src="app.js"></script>
   </body>
