--- a/index.html
+++ b/index.html
@@ -60,19 +60,9 @@ I bring a positive attitude and the willingness and motivation to learn new prog
 				<div class="left-about">
 					<h4>Information About Me</h4>
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-						id metus sed velit faucibus aliquet at a nibh. Nulla sit amet
-						neque tempor lacus dictum tincidunt. Sed cursus, massa interdum
-						pulvinar mattis, ligula ante luctus odio, non congue erat dui ut
-						tellus. Mauris vel rhoncus urna. Donec ullamcorper aliquam lorem
-						eget dignissim. In sit amet orci vehicula, faucibus ex sit amet,
-						viverra arcu. Pellentesque cursus quis sem ut pulvinar. Quisque
-						egestas magna mi, non suscipit diam malesuada et. Pellentesque
-						commodo ante at eros imperdiet, nec accumsan dolor mattis. Aenean
-						vel pellentesque orci, et tristique eros. Cras congue tortor
-						posuere porttitor ullamcorper. Pellentesque feugiat arcu lectus,
-						vitae condimentum turpis commodo vel. Vivamus porta et mauris eget
-						vulputate. Integer vehicula facilisis felis ac consectetur.
+						My name is Uriel, and I'm a Software Engineering student. Since I have memory, I always have enjoyed everything related to computers and software. For that reason, I choose to study "Software Engineering" in the Polytechnical University of Santa Rosa Jauregui in Queretaro, Mexico.
+						During my time at the university, I find out a passion in web & app development, so I decided to focus my skills and motivation on them.
+						I love to learn new things, reading and, of course, programming.
 					</p>
 					<div class="btn-con">
 						<a href="" class="main-btn">
@@ -84,7 +74,7 @@ I bring a positive attitude and the willingness and motivation to learn new prog
 				<div class="right-about">
 					<div class="about-item">
 						<div class="abt-text">
-							<p class="large-text">560+</p>
+							<p class="large-text">2</p>
 							<p class="small-text">
 								Projects <br />
 								Completed
@@ -93,28 +83,28 @@ I bring a positive attitude and the willingness and motivation to learn new prog
 					</div>
 					<div class="about-item">
 						<div class="abt-text">
-							<p class="large-text">10+</p>
+							<p class="large-text">5+</p>
+							<p class="small-text">
+								Certifications <br />
+								Completed
+							</p>
+						</div>
+					</div>
+					<div class="about-item">
+						<div class="abt-text">
+							<p class="large-text">1+</p>
 							<p class="small-text">
 								Years of <br />
-								Experience
+								University studies
 							</p>
 						</div>
 					</div>
 					<div class="about-item">
 						<div class="abt-text">
-							<p class="large-text">300+</p>
+							<p class="large-text">25+</p>
 							<p class="small-text">
-								Happy <br />
-								Clients
-							</p>
-						</div>
-					</div>
-					<div class="about-item">
-						<div class="abt-text">
-							<p class="large-text">400+</p>
-							<p class="small-text">
-								Customer <br />
-								Reviews
+								Courses <br />
+								Studied
 							</p>
 						</div>
 					</div>
@@ -166,14 +156,13 @@ I bring a positive attitude and the willingness and motivation to learn new prog
 					<div class="tl-icon">
 						<i class="fas fa-briefcase"></i>
 					</div>
-					<p class="tl-duration">2010 - Present</p>
-					<h5>Web Developer<span> - Vircrosoft</span></h5>
+					<p class="tl-duration">2020 - Present</p>
+					<h5>Software Engineering<span> - Polytechnical University of Santa Rosa Jauregui</span></h5>
 					<p>
-						a;sdlfkjas;d fjadsl;fj lasdkfjalkfj aklsdjfalsdj falsdkfj asdlkfj
-						alsdfj
+						Mainly web development of several team projects using HTML, CSS, JavaScript, PHP, SQL & CodeIgniter framework.
 					</p>
 				</div>
-				<div class="timeline-item">
+				<!-- <div class="timeline-item">
 					<div class="tl-icon">
 						<i class="fas fa-briefcase"></i>
 					</div>
@@ -183,7 +172,7 @@ I bring a positive attitude and the willingness and motivation to learn new prog
 						a;sdlfkjas;d fjadsl;fj lasdkfjalkfj aklsdjfalsdj falsdkfj asdlkfj
 						alsdfj
 					</p>
-				</div>
+				</div> -->
 			</div>
 		</section>
 		<section class="section sec3 portfolio" id="portfolio">
@@ -196,13 +185,69 @@ I bring a positive attitude and the willingness and motivation to learn new prog
 				<div class="portfolios">
 					<div class="portfolio-item">
 						<div class="image">
-							<img src="https://assets-global.website-files.com/6009ec8cda7f305645c9d91b/602f2109a787c146dcbe2b66_601b1c1f7567a7399353fe47_traackr.jpeg"
+							<img src="assets/img/Web Developer_Flatline.svg"
 								alt="">
 						</div>
 						<div class="hover-items">
-							<h3>Project Source</h3>
+							<h3>Portfolio Web</h3>
 							<div class="icons">
-								<a href="" target="_blank" class="icon">
+								<a href="https://github.com/JustAsteri/Portfolio-Website" target="_blank" class="icon">
+									<i class="fab fa-github"></i>
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="portfolio-item">
+						<div class="image">
+							<img src="assets/img/swimming.jpg"
+								alt="">
+						</div>
+						<div class="hover-items">
+							<h3>Swimming Dashboard</h3>
+							<div class="icons">
+								<a href="https://github.com/JustAsteri/Portfolio-Website" target="_blank" class="icon">
+									<i class="fab fa-github"></i>
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="portfolio-item">
+						<div class="image">
+							<img src="assets/img/raffle.jpg"
+								alt="">
+						</div>
+						<div class="hover-items">
+							<h3>Raffle program</h3>
+							<div class="icons">
+								<a href="https://github.com/JustAsteri/rifaDeBoletos" target="_blank" class="icon">
+									<i class="fab fa-github"></i>
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="portfolio-item">
+						<div class="image">
+							<img src="assets/img/guess.jpg"
+								alt="">
+						</div>
+						<div class="hover-items">
+							<h3>Guess a number game</h3>
+							<div class="icons">
+								<a href="https://github.com/JustAsteri/Juegito" target="_blank" class="icon">
+									<i class="fab fa-github"></i>
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="portfolio-item">
+						<div class="image">
+							<img src="assets/img/"
+								alt="">
+						</div>
+						<div class="hover-items">
+							<h3>Platforms Game</h3>
+							<div class="icons">
+								<a href="https://github.com/JustAsteri/Platforms-Game" target="_blank" class="icon">
 									<i class="fab fa-github"></i>
 								</a>
 							</div>
@@ -220,16 +265,8 @@ I bring a positive attitude and the willingness and motivation to learn new prog
 				<div class="contact-content-con">
 					<div class="left-contact">
 						<h4>Contact me here</h4>
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse quis leo mollis,
-							feugiat leo vitae, ultricies lorem. Phasellus malesuada in metus ac posuere. Vivamus sed
-							tortor velit. Aliquam erat volutpat. Morbi imperdiet quam erat. Ut vehicula id eros id
-							sollicitudin. Sed ut posuere nibh, non tincidunt enim. In sit amet lacus lacus. Fusce tempus
-							consectetur velit, vel tincidunt nulla porttitor in. Nam in scelerisque libero. Integer
-							efficitur felis sit amet nisi placerat, vitae commodo ex auctor. Integer ornare porttitor
-							interdum. In ultrices neque vel erat cursus, sit amet sagittis tellus eleifend. Praesent at
-							risus eu risus egestas tincidunt. Phasellus porta, elit ut tincidunt interdum, magna lectus
-							auctor felis, eu accumsan orci justo a lacus. Donec scelerisque et enim aliquet malesuada.
+						<p id="text-contact">
+							You can contact me trough email. Here you have some of my personal information.
 						</p>
 						<div class="contact-info">
 							<div class="contact-item">
@@ -271,13 +308,13 @@ I bring a positive attitude and the willingness and motivation to learn new prog
 						</div>
 						<div class="contact-icons">
 							<div class="contact-icon">
-								<a href="" target="_blank">
+								<a href="https://github.com/JustAsteri" target="_blank">
 									<i class="fab fa-github"></i>
 								</a>
 							</div>
 						</div>
 					</div>
-					<div class="right-contact">
+					<!-- <div class="right-contact">
 						<form action="" class="contact-form">
 							<div class="input-control i-c-2">
 								<input type="text" required placeholder="YOUR NAME">
@@ -296,7 +333,7 @@ I bring a positive attitude and the willingness and motivation to learn new prog
 								</a>
 							</div>
 						</form>
-					</div>
+					</div> -->
 				</div>
 			</div>
 		</section>
