--- a/index.html
+++ b/index.html
@@ -48,8 +48,10 @@ Passionate about creating software and problem-solving.
 I bring a positive attitude and the willingness and motivation to learn new programs and tools.
 				</p>
 				<div class="btn-con">
-					<a href="https://drive.google.com/file/d/1dnUjvsgmdRSWG3kp3rVjgQ1W4srgcmU-/view?usp=sharing" target="_blank" class="main-btn">
-						<span class="btn-text">Download CV</span>
+					<a href="/assets/PDF/CV.pdf" download="" class="main-btn">
+						<span class="btn-text">
+							Download CV
+						</span>
 						<span class="btn-icon"><i class="fas fa-download"></i></span>
 					</a>
 				</div>
@@ -73,7 +75,7 @@ I bring a positive attitude and the willingness and motivation to learn new prog
 						I love to learn new things, reading and, of course, programming.
 					</p>
 					<div class="btn-con">
-						<a href="https://drive.google.com/file/d/1dnUjvsgmdRSWG3kp3rVjgQ1W4srgcmU-/view?usp=sharing" target="_blank" class="main-btn">
+						<a href="/assets/PDF/CV.pdf" download="" class="main-btn">
 							<span class="btn-text">Download CV</span>
 							<span class="btn-icon"><i class="fas fa-download"></i></span>
 						</a>
