Added 'Linkedin' button in contacts

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 	<!-- Delete watermark -->
 	<style>
-		#ultimo + div {
+		#ultimo+div {
 			visibility: hidden;
 		}
 	</style>
@@ -44,8 +44,8 @@
 				</h1>
 				<p>
 					I'm a Software student with experience in web development.
-Passionate about creating software and problem-solving.
-I bring a positive attitude and the willingness and motivation to learn new programs and tools.
+					Passionate about creating software and problem-solving.
+					I bring a positive attitude and the willingness and motivation to learn new programs and tools.
 				</p>
 				<div class="btn-con">
 					<a href="/assets/PDF/CV.pdf" download="" class="main-btn">
@@ -70,8 +70,11 @@ I bring a positive attitude and the willingness and motivation to learn new prog
 				<div class="left-about">
 					<h4>Information About Me</h4>
 					<p>
-						My name is Uriel, and I'm a Software Engineering student. Since I have memory, I always have enjoyed everything related to computers and software. For that reason, I choose to study "Software Engineering" in the Polytechnical University of Santa Rosa Jauregui in Queretaro, Mexico.
-						During my time at the university, I find out a passion in web & app development, so I decided to focus my skills and motivation on them.
+						My name is Uriel, and I'm a Software Engineering student. Since I have memory, I always have enjoyed
+						everything related to computers and software. For that reason, I choose to study "Software Engineering" in
+						the Polytechnical University of Santa Rosa Jauregui in Queretaro, Mexico.
+						During my time at the university, I find out a passion in web & app development, so I decided to focus my
+						skills and motivation on them.
 						I love to learn new things, reading and, of course, programming.
 					</p>
 					<div class="btn-con">
@@ -130,7 +133,7 @@ I bring a positive attitude and the willingness and motivation to learn new prog
 					</div>
 					<div class="about-item">
 						<div class="abt-text">
-							<p class="large-text">CSS</p>
+							<p class="large-text">CSS - SASS - SCSS</p>
 						</div>
 					</div>
 					<div class="about-item">
@@ -158,6 +161,11 @@ I bring a positive attitude and the willingness and motivation to learn new prog
 							<p class="large-text">PYTHON</p>
 						</div>
 					</div>
+					<div class="about-item">
+						<div class="abt-text">
+							<p class="large-text">REACT</p>
+						</div>
+					</div>
 				</div>
 			</div>
 			<h4 class="stat-title">My Timeline</h4>
@@ -169,7 +177,8 @@ I bring a positive attitude and the willingness and motivation to learn new prog
 					<p class="tl-duration">2020 - Present</p>
 					<h5>Software Engineering<span> - Polytechnical University of Santa Rosa Jauregui</span></h5>
 					<p>
-						Mainly web development of several team projects using HTML, CSS, JavaScript, PHP, SQL & CodeIgniter framework.
+						Mainly web development of several team projects using HTML, CSS, JavaScript, PHP, SQL & CodeIgniter
+						framework.
 					</p>
 				</div>
 				<!-- <div class="timeline-item">
@@ -196,8 +205,7 @@ I bring a positive attitude and the willingness and motivation to learn new prog
 			<div class="portfolios">
 				<div class="portfolio-item">
 					<div class="image">
-						<img src="assets/img/Web Developer_Flatline.svg"
-							alt="">
+						<img src="assets/img/Web Developer_Flatline.svg" alt="">
 					</div>
 					<div class="hover-items">
 						<h3>Portfolio Web</h3>
@@ -210,8 +218,7 @@ I bring a positive attitude and the willingness and motivation to learn new prog
 				</div>
 				<div class="portfolio-item">
 					<div class="image">
-						<img src="assets/img/swimming.jpg"
-							alt="">
+						<img src="assets/img/swimming.jpg" alt="">
 					</div>
 					<div class="hover-items">
 						<h3>Swimming Dashboard</h3>
@@ -224,8 +231,7 @@ I bring a positive attitude and the willingness and motivation to learn new prog
 				</div>
 				<div class="portfolio-item">
 					<div class="image">
-						<img src="assets/img/raffle.jpg"
-							alt="">
+						<img src="assets/img/raffle.jpg" alt="">
 					</div>
 					<div class="hover-items">
 						<h3>Raffle program</h3>
@@ -238,8 +244,7 @@ I bring a positive attitude and the willingness and motivation to learn new prog
 				</div>
 				<div class="portfolio-item">
 					<div class="image">
-						<img src="assets/img/guess.jpg"
-							alt="">
+						<img src="assets/img/guess.jpg" alt="">
 					</div>
 					<div class="hover-items">
 						<h3>Guess a number game</h3>
@@ -252,8 +257,7 @@ I bring a positive attitude and the willingness and motivation to learn new prog
 				</div>
 				<div class="portfolio-item">
 					<div class="image">
-						<img src="assets/img/2022-08-04_11-30.png"
-							alt="">
+						<img src="assets/img/2022-08-04_11-30.png" alt="">
 					</div>
 					<div class="hover-items">
 						<h3>Platforms Game</h3>
@@ -320,6 +324,9 @@ I bring a positive attitude and the willingness and motivation to learn new prog
 							<div class="contact-icon">
 								<a href="https://github.com/JustAsteri" target="_blank">
 									<i class="fab fa-github"></i>
+								</a>
+								<a href="https://www.linkedin.com/in/uriel-moya-mata/" target="_blank">
+									<i class="fab fa-linkedin"></i>
 								</a>
 							</div>
 						</div>
