--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 							</div>
 							<div class="contact-item">
 								<div class="icon">
-									<i class="fas fa-map-marker-alt"></i>
+									<i class="fas fa-envelope"></i>
 									Email
 								</div>
 								<p>
@@ -303,16 +303,16 @@
 							</div>
 							<div class="contact-item">
 								<div class="icon">
-									<i class="fas fa-map-marker-alt"></i>
+									<i class="fas fa-school"></i>
 									Education
 								</div>
 								<p>
-									: Software Engineering, Politecnic University of Santa Rosa Jauregui
+									: Software Engineering | Politecnic University of Santa Rosa Jauregui, Mexico
 								</p>
 							</div>
 							<div class="contact-item">
 								<div class="icon">
-									<i class="fas fa-map-marker-alt"></i>
+									<i class="fas fa-language"></i>
 									Languages
 								</div>
 								<p>
